// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 60,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#00C4C6",
        },
        Object {
          "borderRadius": 12,
          "borderTopEndRadius": 0,
          "flex": 1,
          "paddingBottom": 4,
          "paddingTop": 4,
        },
        Object {
          "paddingLeft": 8,
          "paddingRight": 8,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      message
    </Text>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "bottom": 6,
          "position": "absolute",
          "right": 8,
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "borderRadius": 12,
          "height": 24,
          "marginLeft": 4,
          "width": 24,
        },
        Object {
          "marginLeft": 5,
        },
      ]
    }
  />
</View>
`;

exports[`TESTING ChatItemTargetText RENDER not continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 60,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#00C4C6",
        },
        Object {
          "borderRadius": 12,
          "borderTopEndRadius": 0,
          "flex": 1,
          "paddingBottom": 4,
          "paddingTop": 4,
        },
        Object {
          "paddingLeft": 8,
          "paddingRight": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        username
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 2,
            "height": 3,
            "marginLeft": 5,
            "marginRight": 5,
            "width": 3,
          }
        }
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#FFFFFF",
            "fontFamily": "Inter-ExtraLight",
            "fontSize": 10,
            "lineHeight": 12.19,
          }
        }
      >
        time
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
    >
      message
    </Text>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "bottom": 6,
          "position": "absolute",
          "right": 8,
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 4,
      }
    }
  >
    https://www.google.com
  </View>
</View>
`;
